--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,8 @@ quarkus.log.console.enable=true
 
 #H2 DB configuration
 quarkus.datasource.db-kind=h2
-quarkus.datasource.jdbc.url=jdbc:h2:file:/data/h2db/mydb
-# quarkus.datasource.jdbc.url=jdbc:h2:mem:mydb
+quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb
+quarkus.hibernate-orm.database.generation=drop-and-create
+
 quarkus.datasource.username=admin
 quarkus.datasource.password=admin
-quarkus.datasource.h2.console.enabled=true
-quarkus.datasource.h2.console.path=/h2-console
